argocd/manifests/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: 'Host(`argocd.k3s.v3nc.org`)'
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: 'Host(`argocd.k3s.v3nc.org`) && Headers(`Content-Type`, `application/grpc`)'
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
  tls:
    secretName: argocd-https-cert
